refactor: 보드를 초기화하는 코드의 중복 제거
함수형 인터페이스와 스트림의 기능을 사용해서 개선